# columnar-python-client

./: .gitignore  .pre-commit-config.yaml  BUILDING.md  CMakeLists.txt  MANIFEST.in  README.md  conftest.py  couchbase_columnar_version.py  dev_requirements.txt  mypy.ini  pycbcc_build_setup.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_wheels.yml  cibuildwheel.yml  publish.yml  tests.yml  verify_release.yml  wheels.yml
acouchbase_columnar/: __init__.py  cluster.py  cluster.pyi  database.py  database.pyi  deserializer.py  exceptions.py  options.py  result.py  scope.py  scope.pyi
acouchbase_columnar/protocol/: cluster.py  cluster.pyi  database.py  database.pyi  query.py  scope.py  scope.pyi
acouchbase_columnar/tests/: connection_t.py  error_t.py  options_t.py  query_options_t.py  query_t.py
couchbase_columnar/: cluster.py  cluster.pyi  credential.py  database.py  database.pyi  options.py  query.py  result.py  scope.py  scope.pyi
couchbase_columnar/common/: __init__.py  config_profile.py  credential.py  deserializer.py  enums.py  exceptions.py  options.py  options_base.py  options_base.pyi  query.py  result.py  streaming.py
docs/: conf.py  index.rst  using_the_columnar_sdk.rst
examples/: async_query.py  async_scope_query.py  query.py  scope_query.py
src/: client.cxx  client.hxx  columnar_query.cxx  columnar_query.hxx  connection.cxx  connection.hxx  exceptions.cxx  exceptions.hxx  logger.cxx  logger.hxx  result.cxx  result.hxx  utils.cxx  utils.hxx
tests/: __init__.py  columnar_config.py  test_config.ini
(+57 files in other folders)
