[build-system]
requires = [
  "setuptools>=42",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
log_cli = true
#addopts = "-ra -q"
testpaths = [
    "tests",
    "acouchbase_columnar/tests",
    "couchbase_columnar/tests",
]
python_classes = [
    "*Tests"
]
python_files = [
    "*_t.py"
]
markers = [
    "pycbcc_couchbase: marks a test for the couchbase API (deselect with '-m \"not pycbcc_couchbase\"')",
    "pycbcc_acouchbase: marks a test for the acouchbase API (deselect with '-m \"not pycbcc_acouchbase\"')",
    "pycbcc_diag: marks a test as a diagnostic API test",
    "pycbcc_kv: marks a test as a Key-Value API test",
    "pycbcc_streaming: marks a test as a streaming (query, search, analytics, or views) API test",
    "pycbcc_mgmt: marks a test as a management API test",
    "pycbcc_misc: marks a test as a miscellaneous (connect, rate_limit) API test",
    "pycbcc_txn: marks a test as a transactions API test",
    "pycbcc_slow_mgmt: marks a test as a management API test that is slow",
]

[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true

[tool.isort]
multi_line_output = 1
force_grid_wrap = 3
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
order_by_type = true
